# openxr-quest-tutorial

./: .geminiignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  build.gradle.kts  chapter5.txt  openxr.txt  package-lock.json  settings.gradle.kts  sst_scanner.py  tmp_fix.py  tmp_show.py  tmp_show.py)  tmp_tail.py  tmp_vulkan_snip.py
.claude/: doc-sources.toml  settings.json  settings.local.json
.claude/scripts/: statusline.sh
.claude/skills/add-doc/: SKILL.md
.claude/skills/add-doc/scripts/: add-source.py
.claude/skills/add-doc/templates/: source-entry.toml
.claude/skills/adr/: SKILL.md
.claude/skills/adr/scripts/: update-adr-toc.py
.claude/skills/adr/templates/: adr-template.md  toc-template.md
.claude/skills/doc-query/: SKILL.md
.claude/skills/doc-query/lib/: __init__.py  context7_client.py
.claude/skills/doc-query/scripts/: list-sources.py  query.py
Chapter5_extracted/Chapter5/: CMakeLists.txt  main.cpp
docs/: Environment_Setup.md  GLOSSARY.md  Project_Plan.md  README.md  Repository_Structure.md  claude-sst.md  code-sst.md  codex-sst.md  gemini-sst.md  markdown-sst.md
docs/adrs/: README.md  adr-0000-use-adrs-to-document-architecturally-significant-decisions.md  adr-0001-consolidated-tutorial-repository-for-openxr-quest-samples.md  adr-0002-workstation-level-prerequisite-installation.md  adr-0003-use-ovr-openxr-mobile-sdk-for-meta-extensions.md  adr-0004-establish-open-ai-code-assistants-structure.md  adr-0005-openxr-sdk-dependency-management-via-maven-and-fetchcontent.md  adr-0006-use-ai-assisted-tooling-for-adr-creation.md  adr-0007-build-and-run-architecture.md  adr-0008-adapt-meta-openxr-samples-using-established-build-blueprint.md  adr-0008-integrate-meta-openxr-samples-with-minimal-changes.md  adr-0009-automatic-gradle-wrapper-bootstrapping.md  adr-0010-composite-build-for-openxr-samples.md  adr-0011-use-context7-mcp-for-documentation-access.md  adr-0012-graphics-api-strategy-vulkan-for-openxr-opengles-for-meta.md  adr-0013-activity-model-gameactivity-for-openxr-nativeactivity-for-meta.md  adr-0014-disable-auto-compact-for-token-economy.md  adr-0015-project-level-claude-permissions.md  adr-0016-project-level-status-line-configuration.md
meta/: INTEGRATION_NOTES.md  README.md
meta/Samples/: CMakeLists.txt  build.gradle  cleanup_gradle_wrapper.py  gradle.properties  settings.gradle.kts  update_build_gradle.py  update_gradlew.py  update_settings.py
meta/Samples/SampleXrFramework/Src/: XrApp.cpp
meta/Samples/XrSamples/XrHandWMM/: CMakeLists.txt
meta/Samples/XrSamples/XrHandsCtrl/: CMakeLists.txt
meta/Samples/XrSamples/XrPtOcclusion/: CMakeLists.txt
meta/Samples/XrSamples/XrSpatialAnchor/: README.md
openxr/: README.md  build.gradle.kts  settings.gradle.kts
openxr/camera2_tutorial/: CMakeLists.txt  README.md  build.gradle  log.txt  main.cpp  settings.gradle  take_snapshot.bat
openxr/camera2_tutorial/Common/: CMakeLists.txt  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h
openxr/camera2_tutorial/app/: build.gradle
openxr/camera2_tutorial/app/src/main/: AndroidManifest.xml
openxr/camera2_tutorial/app/src/main/cpp/: DebugOutput.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPI_Vulkan.cpp  GraphicsAPI_Vulkan.h  HelperFunctions.h  main.cpp  xr_linear_algebra.h
openxr/camera2_tutorial/app/src/main/java/com/example/openxrcamera2tutorial/: Camera2TutorialActivity.java
openxr/camera2_tutorial/app/src/main/res/values/: strings.xml
openxr/hello_world/: CMakeLists.txt  build.gradle  settings.gradle
openxr/hello_xr/: AndroidManifest.xml  Application_Logic.md  CMakeLists.txt  INTEGRATION_NOTES.md  OpenXR_Tutorial.md  build.gradle  convert_spv_to_hex.py  gradlew.bat
openxr/hello_xr/vulkan_shaders/: frag.spv
openxr/tutorial/: README.md  build.gradle.kts  settings.gradle.kts  update_chapters.py
openxr/tutorial/.claude/: settings.local.json
openxr/tutorial/Chapter1/: main.cpp
openxr/tutorial/Chapter2/: main.cpp
openxr/tutorial/Chapter3/: CMakeLists.txt  main.cpp
openxr/tutorial/Chapter5/: README.md  main.cpp
openxr/tutorial/Chapter6/: build.gradle  main.cpp
openxr/tutorial/Common/: CMakeLists.txt  GraphicsAPI_Vulkan.cpp
openxr/tutorial/Common/app/: build.gradle
openxr/tutorial/Shaders/: CMakeLists.txt  VertexShader.glsl  VertexShader_Multiview.glsl
samples/: Build_Guidelines.md  README.md
samples/OXR/: show_logs.bat  update_chapters.py
samples/OXR/Chapter3/app/: build.gradle
samples/OXR/Common/: CMakeLists.txt  GraphicsAPI.h  GraphicsAPI_Vulkan.cpp
samples/OXR/Shaders/: CMakeLists.txt
samples/hello_world/: AndroidManifest.xml  CMakeLists.txt  README.md  adb_cleanup.bat  build.gradle  main.cpp  test_run.bat
samples/hello_xr/: CMakeLists.txt  Developers_Guidelines.md  Developers_Guidelines_Windows.md  INTEGRATION_NOTES.md  README.md  adb_cleanup.bat  build.gradle  graphicsplugin_vulkan.cpp  main.cpp  test_run.bat
samples/hello_xr/vulkan_shaders/: vert.spv
samples/openxr-tutorial/: README.md  show_logs.bat
samples/openxr-tutorial/Chapter1/: CMakeLists.txt  README.md
samples/openxr-tutorial/Chapter2/: README.md
samples/openxr-tutorial/Chapter3/: README.md
samples/openxr-tutorial/Chapter4/: README.md  main.cpp
samples/openxr-tutorial/Chapter5/: INTEGRATION_NOTE.md  README.md
samples/openxr-tutorial/Chapter6/: CMakeLists.txt  README.md
samples/openxr-tutorial/Common/: GraphicsAPI.h  GraphicsAPI_Vulkan.cpp  OpenXRDebugUtils.cpp  OpenXRHelper.h
samples/openxr-tutorial/chapter1/: CMakeLists.txt  INTEGRATION_NOTES.md  README.md  adb_cleanup.bat  build.gradle  main.cpp  settings.gradle  test_run.bat
samples/openxr-tutorial/chapter2/: CMakeLists.txt  INTEGRATION_NOTES.md  README.md  adb_cleanup.bat  main.cpp  test_run.bat
samples/openxr-tutorial/chapter3/: CMakeLists.txt  INTEGRATION_NOTES.md  README.md  adb_cleanup.bat  main.cpp  settings.gradle  test_run.bat
samples/openxr-tutorial/chapter3/app/: build.gradle
samples/openxr-tutorial/chapter3/app/src/main/: AndroidManifest.xml
samples/openxr-tutorial/chapter4/: gradle.properties
(+97 files in other folders)
